fixed wrong padding for menu__items

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -4,7 +4,7 @@
 
 .nav__items {
   margin: 0 auto;
-  padding-top: 15px;
+  padding: 15px 0 0 0;
   display: flex;
   justify-content: center;
   list-style-type: none;
